--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 title: Dmitrii Kuvaiskii -- CV
 url: 'http://dimakuv.github.io/'
-baseurl: 'http://dimakuv.github.io/' #change it according to your repository name
+baseurl: '' #change it according to your repository name
 
 
 # Enable one of these styles by removing #
