--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ name: Dmitrii Kuvaiskii
 
 #sidebar links
 email: dmitrii.kuvaiskii@gmail.com
-phone: +49 (176) 9978 5337
+#phone: +49 (176) 9978 5337
 #website: blog.webjeda.com #do not add http://
 #linkedin: alandoe
 github: dimakuv
